Layout Bug gefixt (jetzt aber)

--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,8 @@ html, body {
 	font-size: 12pt;
 }
 
-#text_halfwidth {
-	width: 50%; 
-}
-
 #page {
-	min-width: 800px;
+	min-width: 820px;
 	max-width: 1100px;
 	margin: 30px auto;
 	-moz-box-shadow: 0px 0px 15px #AAAAAA;
@@ -19,12 +15,13 @@ html, body {
 }
 
 header {
-	background-color: #61A0D4;
+	background-color: #619FD3;
 	color: #FEFEFE;
 	height: 99px;
 }
 
 header nav {
+	position: relative;
 	display: inline-block;
 	float: right;
 }
@@ -54,12 +51,53 @@ header nav ul li div {
 	visibility: hidden;
 }
 
+header nav ul li #register_click {
+	width: 300px;
+	text-align: right;
+	position: absolute;
+	top: 110px;
+	left: -20px;
+	background-color: #a0c6e5;
+	display: none;
+	visibility: visible;
+	font-size: 10.5pt;
+	padding: 0px 5px;
+	z-index:10;
+}
+
+header nav ul li #register_click #register_close {
+	position: relative;
+	top:3px;
+	border-width: 0px;
+}
+
+header nav ul li #register_click input {
+	width: 140px;
+	text-align: right;
+	background-color: #add0ea;
+	border: 1px inset #a0c6e5;
+	font-size:9pt;
+	color: #FFFFFF;
+}
+
+header nav ul li #register_click input.button {
+	width: 100px;
+	text-align: center;
+	background-color: #61A0D4;
+	border: 1px outset #61A0D4;
+	font-size: 9pt;
+	color: #FFFFFF;
+}
+
 #content {
 	min-height: 500px;
 	background-color: #FFFFFF;
 	padding: 25px;
-	text-align: justify;
 	line-height: 23px;
+}
+
+#content p {
+	text-align: justify;
 }
 
 #content div.halfwidth {
@@ -77,7 +115,14 @@ header nav ul li div {
 	box-shadow: 0px 0px 15px #AAAAAA;
 }
 
+#content #mapdiv {
+	position: relative;
+	width: 100%;
+	height: 600px;
+}
+
 #content #map_big {
+	position: absolute;
 	width: 100%;
 	height: 600px;
 	margin-right: 25px;
@@ -85,6 +130,67 @@ header nav ul li div {
 	-moz-box-shadow: 0px 0px 15px #AAAAAA;
 	-webkit-box-shadow: 0px 0px 15px #AAAAAA;
 	box-shadow: 0px 0px 15px #AAAAAA;
+	z-index: 1;
+}
+
+#content #searchbar {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	height:21px;
+	padding:0px 0px 0px 10px;
+	z-index: 2;
+	background-color: #a0c6e5;
+	-moz-border-radius:10px;
+	-khtml-border-radius:10px;
+	border-radius:10px;
+}
+
+#content #searchbar input {
+	background-color:#A0C6E5;
+	border-width:0px;
+	font-size:9pt;
+	width:100px;
+	position:relative;
+	top:-2px;
+	color:#ffffff;
+}
+
+#content #searchbar input.button {
+	position:relative;
+	top:-2px;
+	height:21px;
+	width:100px;
+	-moz-border-radius:10px;
+	-khtml-border-radius:10px;
+	border-radius:10px;
+	background-color:#5b8eb8;
+	color:#ffffff;
+	margin:0px;
+	padding-left:0px;
+	font-weight:bold;
+}
+
+#content #co_button {
+	top: 50px;
+}
+
+#content #no2_button {
+	top: 110px;
+}
+
+#content #temp_button {
+	top: 170px;
+}
+
+#content #hum_button {
+	top: 230px;
+}
+
+#content .map_buttons {
+	position: absolute;
+	right: 10px;
+	z-index: 2;
 }
 
 #content h1 {
@@ -93,6 +199,7 @@ header nav ul li div {
 	font-weight: bold;
 	letter-spacing: 2px;
 	text-indent:10px;
+	line-height: 150%;
 }
 
 #content h2 {
@@ -101,6 +208,7 @@ header nav ul li div {
 	font-weight: bold;
 	letter-spacing: 2px;
 	text-indent:20px;
+	line-height: 130%;
 }
 
 #content h3 {
@@ -108,6 +216,7 @@ header nav ul li div {
 	font-size: 110%;
 	font-weight: bold;
 	text-indent:30px;
+	line-height: 100%;
 }
 
 footer {
@@ -126,7 +235,7 @@ footer p a {
 }
 
 footer p a:hover, a:active {
-	background-color:#80b8e5;
+	background-color: #80B8E5;
 }
 
 a {
@@ -136,4 +245,97 @@ a {
 
 a:hover, a:active {
 	text-decoration: none;
+}
+
+#navi_left {
+	float: left;
+}
+
+#navi_left div {
+	background-color: #E9F2F9;
+	padding: 10px;
+	margin-bottom: 20px;
+	width: 50px;
+	max-width: 50px;
+}
+
+#navi_left div img {
+	display: block;
+	margin-bottom: 10px;
+}
+
+#navi_left div img.active {
+	border-right: 10px solid #BCD7ED;
+}
+
+#navi_left div img.last {
+	margin-bottom: 0px;
+}
+
+#time_picker {
+	margin-left: 20px;
+	height: 33px;
+	background-color: #E9F2F9;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	display: inline-block;
+}
+
+#time_picker div {
+	float: left;
+	background-color: #A0C6E5;
+	margin-right: 10px;
+	width: 110px;
+	text-align: center;
+}
+
+#time_picker div.active {
+	background-color: #A0C6E5;
+	border-bottom: 10px solid #BCD7ED;
+}
+
+#time_picker div a {
+	display: block;
+	padding: 5px 10px;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+#data_content {
+	display: inline-block;
+	margin: 12px 20px;
+	min-height: 500px;
+	min-width: 670px;
+}
+
+#data_content p {
+	max-width: 800px;
+}
+
+#data_content table {
+	width: 730px;
+	background-color: #E9F2F9;
+	padding: 10px;
+	padding-top: 0px;
+}
+
+#data_content table tr th {
+	text-align: left;
+	padding: 0px 10px;
+	border-bottom: 1px solid #1F3F59;
+	width: 20%;
+}
+
+#data_content table tr td {
+	padding: 0px 13px;
+	border-bottom: 1px solid #d1d9e0;
+}
+
+#diagram {
+	background-color: #E9F2F9;
+}
+
+img {
+	border: 0px;
 }
